# LVGL_Project

./: .cproject  .project  CMakeLists.txt  Makefileeee  README.md  demo  lv_drv_conf.h  main.cpp  print_pierre.cpp  print_pierre.h
lv_drivers/: .cproject  CMakeLists.txt
lv_drivers/wayland/: .cproject
lvgl/: .cproject  CMakeLists.txt
lvgl/demos/widgets/: lv_demo_widgets.c
lvgl/tests/: .cproject
lvgl/tests/makefile/: test.c
ui/: ui.c  ui.h  ui_events.cpp
